// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DestinationList Added default items in right column 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={
      Array [
        Object {
          "id": "3",
          "label": "default item3",
        },
        Object {
          "id": "8",
          "label": "default item4",
        },
      ]
    }
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList custom messages 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Uncheck all"
    noneSelectedMessage="Nothing"
    selected={Array []}
    selectedMessage="Checked"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage="No entries available..."
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList custom noItemsRenderer 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[MockFunction mockedComponent]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList custom selectedItemRenderer 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[MockFunction mockedComponent]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList custom selectionStatusRenderer 1`] = `
<Column>
  <mockConstructor
    clearAll={undefined}
    clearAllMessage={undefined}
    noneSelectedMessage={undefined}
    selected={Array []}
    selectedMessage={undefined}
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList default snapshot 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed clearAll 1`] = `
<Column>
  <SelectionStatus
    clearAll={[MockFunction clearAll]}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed selectedIds 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={
      Array [
        1,
        2,
      ]
    }
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed selectedItems 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={
      Array [
        1,
        2,
      ]
    }
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed selectedItems with grouping 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={
      Array [
        Object {
          "disabled": true,
          "id": "group1",
          "isGroup": true,
          "label": "group1",
        },
        Object {
          "group": "group1",
          "id": 1,
          "label": "item1",
        },
        Object {
          "group": "group1",
          "id": 3,
          "label": "item3",
        },
        Object {
          "disabled": true,
          "id": "group2",
          "isGroup": true,
          "label": "group2",
        },
        Object {
          "group": "group2",
          "id": 2,
          "label": "item2",
        },
      ]
    }
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed selectedItems with grouping and empty items 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;

exports[`DestinationList passed unselectItems 1`] = `
<Column>
  <SelectionStatus
    clearAll={undefined}
    clearAllMessage="Clear All"
    noneSelectedMessage="None Selected"
    selected={Array []}
    selectedMessage="selected"
  />
  <ItemsList
    disabled={false}
    height={355}
    itemHeight={40}
    items={Array []}
    noItemsMessage={undefined}
    noItemsRenderer={[Function]}
    offset={0}
    onClick={[Function]}
    renderer={[Function]}
    selectedIds={Array []}
  />
</Column>
`;
